--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vue-slicksort": "^1.1.3",
+    "vuedraggable": "^2.20.0",
     "vuetify": "^1.5.5",
-    "vuex": "^3.0.1"
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.7.0",
